[project]
name = "vonnegut"
version = "0.1.0"
description = "Split-pane TUI writing agent: editor left, AI chat right."
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.49",
    "textual>=0.80",
]

[project.scripts]
vonnegut = "vonnegut:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["vonnegut"]
